--- a/index.html
+++ b/index.html
@@ -289,6 +289,22 @@
     .leaflet-interactive {
       cursor: pointer;
     }
+    /* Tarjeta fija por defecto (escritorio) ya la tienes con .infocard.locked */
+
+/* ====== MÓVIL: tarjeta acoplada ABAJO ====== */
+@media (max-width: 768px) {
+  .infocard.locked {
+    left: 12px; right: 12px; top: auto; bottom: 12px;   /* abajo */
+    max-width: none;                                     /* ocupa ancho útil */
+    border-radius: 16px;
+    transform-origin: bottom center;                     /* animación desde abajo */
+  }
+  .infocard .list { max-height: 160px; overflow-y: auto; }
+
+  /* Un poco más de espacio para el panel de botones */
+  .panel { top: 8px; left: 8px; right: 8px; }
+}
+
   </style>
 </head>
 
@@ -1071,7 +1087,27 @@
       infoCard.style.left = (e.originalEvent.pageX + pad) + "px";
       infoCard.style.top = (e.originalEvent.pageY + pad) + "px";
     }
+    function placeInfoCardLocked() {
+  // Escritorio: esquina sup. derecha
+  infoCard.style.left = "auto";
+  infoCard.style.right = "24px";
+  infoCard.style.top = "24px";
+  infoCard.style.bottom = "auto";
 
+  // Móvil: abajo tipo "bottom sheet"
+  if (window.innerWidth <= 768) {
+    infoCard.style.left = "12px";
+    infoCard.style.right = "12px";
+    infoCard.style.top = "auto";
+    infoCard.style.bottom = "12px";
+  }
+}
+
+// Recolocar si cambia el tamaño de la ventana
+window.addEventListener('resize', () => {
+  if (infoCard.classList.contains('locked')) placeInfoCardLocked();
+});
+    
     function onLeave(e, layer) {
       if (LOCKED_FEATURE && LOCKED_FEATURE === layer) return;
       layer.setStyle({ weight: 0.6, color: "#888" });
@@ -1096,9 +1132,7 @@
         showInfoCard(e, layer, true);
         infoCard.classList.remove('fly-out');
         infoCard.classList.add('locked');
-        infoCard.style.left = "auto";
-        infoCard.style.right = "24px";
-        infoCard.style.top = "24px";
+        placeInfoCardLocked();
         focusDept(layer);
       }
     }
@@ -1175,3 +1209,4 @@
 
 
 </html>
+
